entry list now has overflow scrolling and fixed height

--- a/lexicon-server/src/angular-app/common/css/palaso-ui.css
+++ b/lexicon-server/src/angular-app/common/css/palaso-ui.css
@@ -124,12 +124,18 @@ ul#strength {
     bottom:5px;
 }
 
+
+
+
+
+/* dictionary control */
 form.dc-multitext .control-group {
 	margin-bottom: 10px;
 }
 
-form.dc-multitext label {
+form.dc-multitext label, form.dc-optionlist label {
 	font-weight:bold;
+	cursor: default;
 }
 
 form.dc-multitext .wsid {
@@ -139,6 +145,15 @@ form.dc-multitext .wsid {
 
 #entryList .selected {
 	background-color: #CCFFDB;
+}
+
+#entryList tr:active td {
+	background-color: #CCFFDB;
+}
+
+#entryList {
+	overflow-y: scroll;
+	height: 400px;
 }
 
 #entryItemView i.icon-remove {
